final backup by me

--- a/bs1.html
+++ b/bs1.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-11-23 Sat 18:30 -->
+<!-- 2025-02-01 Sat 18:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bookshelf 1: Math, Physics</title>
@@ -200,7 +200,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgcf892a5">1. Printed Books</a></li>
+<li><a href="#org418ff75">1. Printed Books</a></li>
 </ul>
 </div>
 </div>
@@ -465,6 +465,24 @@
 <tr>
 <td class="org-left">PK Chattopadhyay</td>
 <td class="org-left">Mathematical Physics</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Donald H. Menzel</td>
+<td class="org-left">Fundamental Formulas of Physics</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Wearie, Windsor</td>
+<td class="org-left">Solid State Science</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">H C Verma</td>
+<td class="org-left">Concepts of Physics</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 </tbody>
@@ -771,6 +789,12 @@
 </tr>
 
 <tr>
+<td class="org-left">Feller</td>
+<td class="org-left">An Introduction to Probability Theory and its Applications</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
 <td class="org-left">Gupta, Pandey, Malik</td>
 <td class="org-left">Tensors and Differential Geometry</td>
 <td class="org-left">&#xa0;</td>
@@ -903,12 +927,6 @@
 </tr>
 
 <tr>
-<td class="org-left">Feller</td>
-<td class="org-left">An Introduction to Probability Theory and its Applications</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
 <td class="org-left">Hazewinkel, Lenstra, Meertens</td>
 <td class="org-left">Mathematics and Computer Science II</td>
 <td class="org-left">&#xa0;</td>
@@ -1028,10 +1046,28 @@
 <td class="org-left">Foundations of Differentiable Manifolds and Lie Groups</td>
 <td class="org-left">&#xa0;</td>
 </tr>
+
+<tr>
+<td class="org-left">D J Struik</td>
+<td class="org-left">A Source Book in Mathematics 1200-1800</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Carl B Boyer</td>
+<td class="org-left">The History of the Calculus</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Wilbur Richard Knorr</td>
+<td class="org-left">The Ancient Tradition of Geometric Problems</td>
+<td class="org-left">&#xa0;</td>
+</tr>
 </tbody>
 </table>
-<div id="outline-container-orgcf892a5" class="outline-2">
-<h2 id="orgcf892a5"><span class="section-number-2">1.</span> Printed Books</h2>
+<div id="outline-container-org418ff75" class="outline-2">
+<h2 id="org418ff75"><span class="section-number-2">1.</span> Printed Books</h2>
 <div class="outline-text-2" id="text-1">
 <table border="2" cellspacing="0" cellpadding="6" rules="all" frame="all">
 
@@ -1107,44 +1143,8 @@
 </tbody>
 <tbody>
 <tr>
-<td class="org-left">John B Conway</td>
-<td class="org-left">Functions of One Complex Variable 2e</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Stewart, Tall</td>
-<td class="org-left">Algebraic Number Theory</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Blyth, Robertson</td>
-<td class="org-left">Algebra through Practice</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Fulton, Harris</td>
-<td class="org-left">Representation Theory: A First Course</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">ANdrew Baker</td>
-<td class="org-left">Representations of Finite Groups</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Paul R Halmos</td>
-<td class="org-left">Finite Dimensional Vector Spaces</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Narsimhan, Raghavan, Rangachari, Lal</td>
-<td class="org-left">Algebraic Number Theory</td>
+<td class="org-left">T R Ramadas</td>
+<td class="org-left">Notes on Calculus</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -1161,74 +1161,8 @@
 </tr>
 
 <tr>
-<td class="org-left">Ahlfors</td>
-<td class="org-left">Complex Analysis</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">-</td>
-<td class="org-left">Study Material on Real Analysis &amp; Topology of Metric Spaces</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Rudin</td>
-<td class="org-left">Principles of Mathematical Analysis</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Nathan Jacobson</td>
-<td class="org-left">Basic Algebra I</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Dmitri D Vvedensky</td>
-<td class="org-left">Printed version of his group theory course</td>
-<td class="org-left"><a href="https://web.archive.org/web/20200117205714/http://www.cmth.ph.ic.ac.uk/people/d.vvedensky/courses.html">Link to an Archive of his notes</a></td>
-</tr>
-
-<tr>
-<td class="org-left">Anant R Shastri</td>
-<td class="org-left">Lectures Notes in Algebraic Topology</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Johnsonbaugh, Pfaffenberger</td>
-<td class="org-left">Foundations of Mathemtical Analysis</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Richard S Palais</td>
-<td class="org-left">A Modern Course on Curves and Surfaces</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Sen, Ghosh, Mukhopadhyay</td>
-<td class="org-left">Topics in Abstract Algebra 2e</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Henri Cartan</td>
-<td class="org-left">Elementary Theory of Analytic Functions of One Or Several Complex Variables</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Stein, Shakarchi</td>
-<td class="org-left">Complex Analysis</td>
-<td class="org-left">&#xa0;</td>
-</tr>
-
-<tr>
-<td class="org-left">Grimmett, Stirzaker</td>
-<td class="org-left">Probability and Random Processes</td>
+<td class="org-left">Gerald B Folland</td>
+<td class="org-left">Real Analysis</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -1239,8 +1173,116 @@
 </tr>
 
 <tr>
-<td class="org-left">Gerald B Folland</td>
-<td class="org-left">Real Analysis</td>
+<td class="org-left">Grimmett, Stirzaker</td>
+<td class="org-left">Probability and Random Processes</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Stein, Shakarchi</td>
+<td class="org-left">Complex Analysis</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Henri Cartan</td>
+<td class="org-left">Elementary Theory of Analytic Functions of One Or Several Complex Variables</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Sen, Ghosh, Mukhopadhyay</td>
+<td class="org-left">Topics in Abstract Algebra 2e</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Richard S Palais</td>
+<td class="org-left">A Modern Course on Curves and Surfaces</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Johnsonbaugh, Pfaffenberger</td>
+<td class="org-left">Foundations of Mathemtical Analysis</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Anant R Shastri</td>
+<td class="org-left">Lectures Notes in Algebraic Topology</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Dmitri D Vvedensky</td>
+<td class="org-left">Printed version of his group theory course</td>
+<td class="org-left"><a href="https://web.archive.org/web/20200117205714/http://www.cmth.ph.ic.ac.uk/people/d.vvedensky/courses.html">Link to an Archive of his notes</a></td>
+</tr>
+
+<tr>
+<td class="org-left">Nathan Jacobson</td>
+<td class="org-left">Basic Algebra I</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Rudin</td>
+<td class="org-left">Principles of Mathematical Analysis</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">-</td>
+<td class="org-left">Study Material on Real Analysis &amp; Topology of Metric Spaces</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Ahlfors</td>
+<td class="org-left">Complex Analysis</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Narsimhan, Raghavan, Rangachari, Lal</td>
+<td class="org-left">Algebraic Number Theory</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Paul R Halmos</td>
+<td class="org-left">Finite Dimensional Vector Spaces</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">ANdrew Baker</td>
+<td class="org-left">Representations of Finite Groups</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Fulton, Harris</td>
+<td class="org-left">Representation Theory: A First Course</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Blyth, Robertson</td>
+<td class="org-left">Algebra through Practice</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">Stewart, Tall</td>
+<td class="org-left">Algebraic Number Theory</td>
+<td class="org-left">&#xa0;</td>
+</tr>
+
+<tr>
+<td class="org-left">John B Conway</td>
+<td class="org-left">Functions of One Complex Variable 2e</td>
 <td class="org-left">&#xa0;</td>
 </tr>
 
@@ -1273,7 +1315,7 @@
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2024-11-23 Sat 18:30</p>
+<p class="date">Created: 2025-02-01 Sat 18:24</p>
 </div>
 </body>
 </html>
